--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -4,9 +4,11 @@ node_modules/
 # Build
 dist/
 
-# Variáveis de ambiente (caso exista)
+# Variáveis de ambiente
 .env
-.env.*
+.env.local
+.env.development
+!.env.production
 !.env.example
 
 # Logs
